test/lambda/typed_array_ndim_literal.ls
// Static AST auto-detection of nested numeric literals as N-D ArrayNum.
// Phase 2b §1 of Lambda_Typed_Array2.md
// Rule: when the AST builder sees a fully homogeneous nested literal
// (all inner arrays same length and same numeric elem_type), the transpiler
// emits a single N-D ArrayNum instead of an Array-of-arrays.

// ============================================================
// 2-D INTEGER MATRIX
// ============================================================
'=== 2-D int auto-detect ==='
[[1, 2, 3], [4, 5, 6]]
ndim([[1, 2, 3], [4, 5, 6]])              // 2
shape([[1, 2, 3], [4, 5, 6]])             // [2, 3]
len([[1, 2, 3], [4, 5, 6]])               // 2 (rows)

let m = [[1, 2, 3], [4, 5, 6]]
m
ndim(m)
shape(m)
sum(m)                                      // 21
m[0]                                        // [1, 2, 3] — row view
m[1]                                        // [4, 5, 6]
m[0][0] + m[1][2]                           // 1 + 6 = 7

// ============================================================
// 2-D FLOAT MATRIX
// ============================================================
'=== 2-D float auto-detect ==='
let fm = [[1.5, 2.5], [3.5, 4.5]]
fm
shape(fm)
sum(fm)                                     // 12.0

// ============================================================
// 3-D TENSOR
// ============================================================
'=== 3-D auto-detect ==='
let t = [[[1, 2], [3, 4]], [[5, 6], [7, 8]]]
t
ndim(t)                                     // 3
shape(t)                                    // [2, 2, 2]
sum(t)                                      // 36
t[0]                                        // [[1, 2], [3, 4]]
t[0][1]                                     // [3, 4]
t[1][1][0]                                  // 7

// ============================================================
// AUTO-DETECT MIXES WITH BROADCASTING
// ============================================================
'=== auto-detected used in broadcast ==='
[[1, 2, 3], [4, 5, 6]] + [10, 20, 30]      // (2,3) + (3,) → (2,3)
[[1], [2], [3]] * [[10, 20, 30, 40]]       // (3,1) * (1,4) → (3,4)
[[1, 2], [3, 4]] + [[10, 20], [30, 40]]    // (2,2) + (2,2) → (2,2)

// ============================================================
// AUTO-DETECT ITERATION
// ============================================================
'=== iteration ==='
for (row in [[1, 2, 3], [4, 5, 6], [7, 8, 9]]) sum(row)

// ============================================================
// JAGGED — NOT auto-detected (falls back to Array of arrays)
// ============================================================
'=== jagged falls back ==='
ndim([[1, 2], [3, 4, 5]])                   // 0 — not N-D ArrayNum (jagged)
shape([[1, 2], [3, 4, 5]])                  // error

// ============================================================
// MIXED TYPES NOT PROMOTED
// ============================================================
'=== mixed types ==='
ndim([[1, 2], [3.0, 4.0]])                  // 0 — int row + float row, no promotion

// ============================================================
// EMPTY OUTER OR SINGLE-ROW
// ============================================================
'=== single row ==='
let sr = [[1, 2, 3]]
shape(sr)                                   // [1, 3]
ndim(sr)                                    // 2
sr[0]                                       // [1, 2, 3]

// ============================================================
// REDUCTIONS via for-in
// ============================================================
'=== sum-per-row ==='
let mat = [[1, 2, 3], [10, 20, 30], [100, 200, 300]]
for (row in mat) sum(row)                  // 6, 60, 600
